# hw_28

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml
ads/: admin.py  apps.py  serializers.py  views.py
ads/datasets/: load_csv_to_json.py
ads/fixtures/: ad.json  category.json  location.json  user.json
ads/models/: ad.py  category.py
global/: 1260  1262  2671
hw28/: asgi.py  settings.py  urls.py  wsgi.py
pg_data/base/1/: 1259  2619  2619_vm  2696  pg_internal.init
pg_data/base/16384/: 1247  1249  1259  16389  16390  16395  16397  16398  16401  16403  16405  16406  16409  16425  16426  16429  16431  16445  16452  16468  16497  16498  16504  16516  16517  16518  16519  16522  16524  16525  16529  16531  16533  16534  16537  16539  16540  16541  16542  16554  (+46 more)
pg_data/base/5/: pg_internal.init
pg_data/global/: pg_control  pg_internal.init
pg_data/pg_stat/: pgstat.stat
users/: admin.py  apps.py  serializers.py  views.py
users/models/: location.py  user.py
